HotSwap recipe in INSTALL.md